assert(is_java_primitive(bt)) failed: only primitive type vectors

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b72
    • x86
    • generic
    • Verified

        Nightly failures after 8080325 changes were pushed:

        # Internal Error (hotspot/src/cpu/x86/vm/x86.ad:1702), pid=1299, tid=0x00007fc03c7a6700
        # assert(is_java_primitive(bt)) failed: only primitive type vectors
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150617002303.vkozlov.8080325-b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150617002303.vkozlov.8080325-b00 compiled mode linux-amd64 compressed oops)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e"
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x00007fc050142000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=1307, stack(0x00007fc03c6a6000,0x00007fc03c7a7000)]

        Stack: [0x00007fc03c6a6000,0x00007fc03c7a7000], sp=0x00007fc03c7a0d70, free space=1003k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x10dde41] VMError::report_and_die()+0x151;; VMError::report_and_die()+0x151
        V [libjvm.so+0x7cf26b] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
        V [libjvm.so+0x299467] Matcher::max_vector_size(BasicType)+0xf7;; Matcher::max_vector_size(BasicType)+0xf7
        V [libjvm.so+0xfedf0d] SuperWord::unrolling_analysis(CountedLoopNode*, int&)+0x61d;; SuperWord::unrolling_analysis(CountedLoopNode*, int&)+0x61d
        V [libjvm.so+0xc967f7] IdealLoopTree::policy_unroll_slp_analysis(CountedLoopNode*, PhaseIdealLoop*, int)+0x427;; IdealLoopTree::policy_unroll_slp_analysis(CountedLoopNode*, PhaseIdealLoop*, int)+0x427
        V [libjvm.so+0xc9bcea] IdealLoopTree::policy_unroll(PhaseIdealLoop*)+0x52a;; IdealLoopTree::policy_unroll(PhaseIdealLoop*)+0x52a
        V [libjvm.so+0xc9eeb3] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x1b3;; IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x1b3
        V [libjvm.so+0xc9f12e] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x15e;; IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x15e
        V [libjvm.so+0xc9f04e] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x7e;; IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x7e
        V [libjvm.so+0xcb7370] PhaseIdealLoop::build_and_optimize(bool, bool)+0x1070;; PhaseIdealLoop::build_and_optimize(bool, bool)+0x1070
        V [libjvm.so+0x750ee1] Compile::Optimize()+0xb61;; Compile::Optimize()+0xb61

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: