8129094: assert(is_java_primitive(bt)) failed: only primitive type vectors

Ignored non-primitive type memory operation regardless its (or its inputs) control.

Reviewed-by: roland, mcberg